--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
+    <link href='http://fonts.googleapis.com/css?family=Eagle+Lake' rel='stylesheet' type='text/css'>
     <title>site speare</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="stylesheet" type="text/css" href="reset.css">
+
 
 
 </head>
@@ -18,13 +20,33 @@
 </nav>
 
     <div class="shake1">
-
+        <div class="titles">
+            <h1 class="shake_title">To Be or Not to Be: That Is The Adventure</h1>
+            <h4 class="shake_sub_title">An illustrated, chooseable-path book version of William Shakespeare's Hamlet, written by Ryan North.</h4>
+        </div>
     </div>
-    <div class="shake2">
 
+    <div class="shake2">
+        <h2>Author</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex,
+        totam, nesciunt voluptatum corporis repellat atque temporibus
+        amet aperiam velit cupiditate dolorem mollitia fugit libero consectetur quisquam cumque asperiores ad officiis?
+
+        <img src="images/evil_queen.png" alt="evil queen">
     </div>
     <div class="shake3">
-
+        <h2>Collaborators</h2>
+        <ul>
+            <li>Aaron Diaz (Dresden Codak)</li>
+            <li>Becky (Tiny Kitten Teeth)</li>
+            <li>Carly Monardo (so many good things)</li>
+            <li>Chris Hastings (The Adventures of Dr. McNinja)</li>
+            <li>David Malki (Wondermark)</li>
+            <li>Emily Carroll (The Prince And The Sea, so many others)</li>
+            <li>Jim Zubkavich (Skullkickers)</li>
+            <li>Kate Beaton (Hark! A Vagrant)</li>
+            <li>Kean Soo (Jellaby)</li>
+        </ul>
     </div>
     <div class="shake4">
 
