--- a/index.html
+++ b/index.html
@@ -1,105 +1,147 @@
+<!doctype html>
 <html>
 <head>
+    <title>To Be or Not To Be</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+   <link href='http://fonts.googleapis.com/css?family=Racing+Sans+One' rel='stylesheet' type='text/css'>
+
     <link href='http://fonts.googleapis.com/css?family=Eagle+Lake' rel='stylesheet' type='text/css'>
-    <title>site speare</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
-<link rel="stylesheet" type="text/css" href="reset.css">
-
-
-
+    <!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
+
 <nav>
 <ul>
-    <li><a href="">About</a></li>
-    <li><a href="">Author</a></li>
-    <li><a href="">Collaborators</a></li>
-    <li><a href="">Shakespeare Bio</a></li>
-    <li><a href="">Buy</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#author">Author</a></li>
+    <li><a href="#collab">Collaborators</a></li>
+    <li><a href="#buy">Buy</a></li>
 </ul>
+<div class="banner">
+        <a href="#buy">
+            <img src="images/banner.png" alt="" width=130px>
+            <p class="price">only<br>$15!</li>
+        </a>
+    </div>
+
 </nav>
 
-    <div class="shake1">
-        <div class="titles">
-            <h1 class="shake_title">To Be or Not to Be: That Is The Adventure</h1>
-            <h4 class="shake_sub_title">An illustrated, chooseable-path book version of William Shakespeare's Hamlet, written by Ryan North.</h4>
-        </div>
-    </div>
+    <a class="sectionabout" name="about"></a>
 
-    <div class="shake2">
-        <h2>Author</h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex,
-        totam, nesciunt voluptatum corporis repellat atque temporibus
-        amet aperiam velit cupiditate dolorem mollitia fugit libero consectetur quisquam cumque asperiores ad officiis?
-
-        <img src="images/evil_queen.png" alt="evil queen">
+<div class="shake1">
+    <div class="openbook">
+        <IMG SRC="images/openbook.png" ALT="" WIDTH=66 HEIGHT=66s>
     </div>
-    <div class="shake3">
-        <h2>Collaborators</h2>
+    <div class="headlines">
+        <h1>To Be or Not to Be: <br>That Is The Adventure!</h1>
+        <h4>An illustrated, chooseable-path book version of William Shakespeare's Hamlet, written by Ryan North.</h4>
         <ul>
-            <li>Aaron Diaz (Dresden Codak)</li>
-            <li>Becky (Tiny Kitten Teeth)</li>
-            <li>Carly Monardo (so many good things)</li>
-            <li>Chris Hastings (The Adventures of Dr. McNinja)</li>
-            <li>David Malki (Wondermark)</li>
-            <li>Emily Carroll (The Prince And The Sea, so many others)</li>
-            <li>Jim Zubkavich (Skullkickers)</li>
-            <li>Kate Beaton (Hark! A Vagrant)</li>
-            <li>Kean Soo (Jellaby)</li>
+            <li>This is great literature in what has to be the most accessible, friendly format ever.</li>
+            <li>You get to fight PIRATES. With SWORDS. </li>
+            <li>THE PERFECT GIFT!</li>
         </ul>
     </div>
-    <div class="shake4">
 
+
+</div>
+
+<div class="quotes">
+    <h2>"Basically, this is <em>the best possible thing</em> you could be doing with your money right now in every conceivable way."</h2>
+    <h3>–Book Guardian</h3>
+</div>
+
+<a name="author"></a>
+
+
+<div class="shake2">
+    <div class="author">
+        <h3>The Author</h3>
+        <h4>Ryan North</h4>
+        <p>I've been writing professionally for almost a decade. Dinosaur Comics (a fixed-art comic where the pictures don't change but the words do) brought me early recognition, and more recently the Adventure Time comics I write have been super popular, going to second and even third printings. This is my first novel, and I think it's my best work yet.</li>
+
+        <p>I've included a bunch of links below where you can see other writing, from my Twitter account (jokes! And cranky complaints sometimes too!) to my B^F blog, where I reviewed the insane novelization of the Back To The Future movie, page-by-page, I think you'll find something that makes you say "Man, I want to read more from this guy, but in a chooseable-path gamebook format. Also, there should be explosions in the book."</li>
+
+        <p>I also included a link to my Wikipedia page so that you can see I am a Legit Dude with a history, and not one of those terrible fly-by-night interactive fiction authors your mother warned you about.</li>
+
+        <p>Websites
+            breadpig.com</li>
+            qwantz.com</li>
+            multiversitycomics.com
+            btothef.tumblr.com
+            twitter.com
+            machineofdeath.net
+            reddit.com
+            en.wikipedia.org
+            amazon.com
+
+            <img src="images/man_skull.png" alt="">
     </div>
-    <div class="shake5">
+</div>
 
+<div class="quotes">
+    <h2>"The Bard would not protest too much, wethinks."</h2>
+    <h3>–CBC</h3>
+
+</div>
+
+<a name="collab"></a>
+
+<div class="shake3">
+    <div class="collaborators">
+        <h3>Collaborators</h3>
+        <ul>
+        <li>Aaron Diaz (Dresden Codak)</li>
+        <li>Alex Thomas (Star Wars: The Old Republic)</li>
+        <li>Becky (Tiny Kitten Teeth)</li>
+        <li>Braden Lamb and Shelli Paroline (Adventure Time, Ice Age)</li>
+        <li>Carly Monardo (so many good things)</li>
+        <li>Chris Hastings (The Adventures of Dr. McNinja)</li>
+        <li>Chris Jones (Snowflakes)</li>
+        <li>Danielle Corsetto (Girls With Slingshots)</li>
+        <li>Dustin Harbin (Dharbin!)</li>
+        <li>Emily Carroll (The Prince And The Sea, so many others)</li>
+        <li>Jeph Jacques (Questionable Content)</li>
+        <li>Jim Zubkavich (Skullkickers)</li>
+        <li>John Campbell (Pictures For Sad Children)</li>
+        <li>Kate Beaton (Hark! A Vagrant)</li>
+        <li>Kazu Kibuishi (Amulet, Copper, Daisy Kutter),</li>
+        <li>Matthew Inman (The Oatmeal)</li>
+        <li>Mike Krahulik (Penny Arcade, co-founder of Child's Play)
+        <li>Mike Maihack (Cleopatra In Space)</li>
+        <li>Noelle Stevenson (Nimona, Gingerhaze) (she did the cover too!)</li>
+        <li>Randall Munroe (XKCD)</li>
+        <li>Raynato Castro and Alex Culang (Buttersafe, Katamari Comic)</li>
+        <li>Rosemary Mosco (Bird And Moon)</li>
+        <li>Sam Logan (Sam And Fuzzy)</li>
+        <li>Steve Wolfhard (Cat Rackham, Adventure Time)</li>
+        <li>Tyson Hesse (Boxer Hockey)</li>
+        <li>Zac Gorman (Magical Game Time, all the pretty pictures)... AND MORE</li>
+
+        <img src="images/hamlet_trans.png" alt="">
     </div>
-    <div class="shake6">
+</div>
 
-    </div>
-    <div class="shake7">
+<div class="quotes">
+    <h2>"To Read or Not to Read. There is no question. Go for it..."</h2>
+    <h3>–Recent customer</h3>
 
-    </div>
-    <div class="shake8">
+</div>
 
-    </div>
-    <div class="shake9">
+<a name="buy"></a>
 
-    </div>
-    <div class="shake10">
-
-    </div>
-    <div class="shake11">
-
-    </div>
-    <div class="shake12">
-
-    </div>
-    <div class="shake13">
-
-    </div>
-    <div class="shake14">
-
-    </div>
-    <div class="shake15">
-
-    </div>
-    <div class="shake16">
-
-    </div>
-    <div class="shake17">
-
-    </div>
-    <div class="shake18">
-
-    </div>
-    <div class="shake19">
-
-    </div>
-    <div class="shake20">
-
-    </div>
-
+<div class="shake4 container">
+    <h2>Buy Now!<h2>
+    <fieldset class="row">
+        <legend class="col-sm-3">About You<legend>
+        <div class="col-sm-9">
+        <input type="text" class="form" name="name">
+        </div>
+    </fieldset>
+</div>
 
 </body>
 </html>
